# Arbitrage_Engine

./: .gitignore  CMakeLists.txt  README.md  config.json
benchmarks/: engine_benchmark.cpp
src/: config.cpp  config.hpp  csv_logger.cpp  csv_logger.hpp  main.cpp  quote.hpp
src/engine/: engine.cpp  engine.hpp
src/exchanges/: binance_ws.cpp  binance_ws.hpp  coinbase_ws.cpp  coinbase_ws.hpp  exchange_ws_common.cpp  exchange_ws_common.hpp
tests/: engine_tests.cpp
